--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Counter</string>
     <string name="tap_button">Incremented</string>
+    <string name="tap">Tap</string>
 </resources>
